--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}FAQ - VSTech Limited{% endblock %}
+{% block title %}FAQs - VSTech Limited{% endblock %}
 {% block meta %}
-	<meta name="title" content="FAQ - VSTech Limited">
-    <meta name="keyword" content="FAQ, frequently asked questions, VSTech Limited, products, services, information, help, Do you offer job opportunities or accept ideas from non - staff members??, What is your team&#x27;s experience in developing mobile applications?, Are your team members certified in the latest technologies?, What is your team&#x27;s experience in developing custom software solutions for our industry?, How does your team handle customer service and technical support?, How well does your team understand the technologies used in our industry?, How quickly and effectively can your team respond to technical inquiries and problems?">
+	<meta name="title" content="FAQs - VSTech Limited">
+    <meta name="keyword" content="FAQ, FAQs, frequently asked questions, VSTech Limited, products, services, information, help, Do you offer job opportunities or accept ideas from non - staff members??, What is your team&#x27;s experience in developing mobile applications?, Are your team members certified in the latest technologies?, What is your team&#x27;s experience in developing custom software solutions for our industry?, How does your team handle customer service and technical support?, How well does your team understand the technologies used in our industry?, How quickly and effectively can your team respond to technical inquiries and problems?">
     <meta name="description" content="Find answers to frequently asked questions about VSTech Limited and our products/services on this page.">
 {% endblock %}
 {% block content %}
