--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
 
     {% include 'partials/top-nav.html' %}
     {% include 'partials/breadcrumb.html' %}
+    {% include 'partials/messages.html' %}
     {% block content %}
 
     {% endblock %}
