--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -269,7 +269,7 @@
 							<div class="inner-box ">
 								<div class="title-box">
 									<i class="icon flaticon-business-012-startup"></i>
-									<h5 class="title"><a href="{% url 'about' %}">nnovative Solutions</a></h5>
+									<h5 class="title"><a href="{% url 'about' %}">Innovative Solutions</a></h5>
 								</div>
 								<div class="text">Innovative solutions for a smarter future
 									transforming the world, one solution at a time.</div>
@@ -469,7 +469,7 @@
 									</div>
 								</div>
 								<div class="image-column col-lg-6 col-md-12">
-									<figure class="image"><img src="{% if testimony.image %}{{ testimony.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
+									<figure class="image" ><img class="rounded rounded-circle" src="{% if testimony.image %}{{ testimony.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
 								</div>
 							</div>
 						</div>
@@ -714,8 +714,8 @@
 								<a href="{{ blog.get_absolute_url }}" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
 								<div class="comments">
 									<i class="fa fa-eye" aria-hidden="true"></i> {{ blog.views }}
-									<i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ blog.likes }}
-									<i class="fa fa-thumbs-down" aria-hidden="true"></i> {{ blog.dislikes }}
+									<a href="{% url 'blog:like_post' blog.slug %}"><i class="fa fa-thumbs-up" aria-hidden="true"></i></a> {{ blog.likes }}
+									<a href="{% url 'blog:dislike_post' blog.slug %}"><i class="fa fa-thumbs-down" aria-hidden="true"></i></a> {{ blog.dislikes }}
 									<i class="fa fa-comments"></i> {{ blog.comments.all.count }}
 								</div>
 							</div>
