--- a/templates/partials/top-nav.html
+++ b/templates/partials/top-nav.html
@@ -194,7 +194,7 @@
 			<button class="close-search"><span class="fa fa-times"></span></button>
 
 			<div class="search-inner">
-				<form method="get" action="">
+				<form method="get" action="{% url 'search' %}">
 					<div class="form-group">
 						<input type="search" name="q" placeholder="Search..." required>
 						<button type="submit"><i class="fa fa-search"></i></button>
